# serial_device

./: LICENSE  README.md  pyproject.toml
src/serial_device/: __init__.py
